--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/DenisNasekin/testlab",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,9 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +46,7 @@
     "@types/react-dom": "^18.3.0",
     "ajv": "^7.2.4",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "sass": "^1.79.3",
     "sass-loader": "^16.0.2",
     "style-loader": "^4.0.0",
